--- a/links-externo.html
+++ b/links-externo.html
@@ -8,8 +8,9 @@
 <body>
     <h1>Usando links externos</h1>
     <p>Exemplo 1</p>
-    <p>Você pode acessar o meu <a href="https://gustavoguanabara.github.io/">repositório</a></p> exemplo sem o target="_blank" rel="external"
-    <!-- <p>Você pode acessar o meu <a href="https://gustavoguanabara.github.io/" target="_blank" rel="external">repositório</a></p> 
-     <p>Você também pode acessar o meu <a href="https://youtube.com/cursoemvideo/" target="_blank" rel="external"> canal gratuito do Youtube</a></p> -->
+    <p>Você pode acessar o meu <a href="https://r7.com" target="_blank">segundo </a> 
+        <a href="https://gustavoguanabara.github.io/">repositório</a></p> exemplo sem o target="_blank" rel="external"
+    <p>Você pode acessar o meu <a href="https://gustavoguanabara.github.io/" target="_blank" rel="external">repositório</a></p> 
+     <p>Você também pode acessar o meu <a href="https://youtube.com/cursoemvideo/" target="_blank" rel="external"> canal gratuito do Youtube</a></p>
 </body>
 </html>
