--- a/noticias/pag003.html
+++ b/noticias/pag003.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Página de notícias</h1>
     <p>Esta é a nossa página de notícias.</p>
-    <p>Voltar para a <a href="../links-internos.html">primeira página</a></p>
+    <p>Voltar para a <a href="pag003.html">primeira página</a></p>
 
 </body>
 </html>
